fixed errors for the images. next is to align images, and the links.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2331,7 +2331,7 @@ body {
   margin-top: -2.3rem;
   /* margin-bottom: 22rem; */
   width: 100%; 
-  height: 30%; 
+  height: 10%; 
   object-fit: cover;
   /* background-size: contain; */
 }
@@ -2445,7 +2445,7 @@ body {
 .project-card {
   position: relative;
   overflow: hidden;
-  border: 1px solid #ddd; /* Optional: Add a border around each project card */
+  border: 1px solid #ddd;
 }
 
 /* .projects-section span {
